--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <h2>Avi - Resume</h2>
                 <div class="page-content">
                     <div class="download-link">
-                        <a href="../download-files/CV-Avi-Kaufman.pdf" download>Download PDF Version</a>
+                        <a href="CV-Avi-Kaufman.pdf" download>Download PDF Version</a>
                     </div>
                     <div>
                         <h3>Personal Information</h3>
