--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- maybe change lager the title wen navigate on differnt pages -->
     <title>Avi Kaufman</title>
-    <link rel="stylesheet" href="../styles/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <!-- footer style -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital@1&family=Roboto:wght@500&display=swap"
@@ -23,7 +23,7 @@
                 <div class="logo-content inside-link inside-link">Avi Kaufman</div>
             </a>
             <button class="menu-btn">☰</button>
-            <script src="../scripts/openMenu.js"></script>
+            <script src="openMenu.js"></script>
             <div class="menu-container">
                 <nav class="menu-links">
                     <ul>
@@ -50,7 +50,7 @@
                 <h2>About Me</h2>
                 <div class="page-content about">
                     <div>
-                        <img src="../images/personalImg.jpg" alt="Personal photo of Avi Kaufman" width="120"
+                        <img src="personalImg.jpg" alt="Personal photo of Avi Kaufman" width="120"
                             class="personal-img">
                     </div>
                     <p>I am 29 years old and in my final year of computer science studies at
