--- a/index.html
+++ b/index.html
@@ -321,15 +321,14 @@
             <div class="footer-links-content">
                 <a href="https://www.linkedin.com/in/%E2%80%AAavi-kaufman%E2%80%AC%E2%80%8F-b93540200/"
                     class="inside-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn in new tab">
-                    <i class="fa-brands fa-linkedin fa-flip"></i>
-                </a>
-                <a href="mailto:avrikaufman@gmail.com" class="inside-link" target="_blank" rel="noopener noreferrer"
-                    aria-label="Email in new tab">
-                    <i class="fa-brands fa-envelope fa-flip"></i>
+                    <i class="fab fa-linkedin-in"></i>
                 </a>
                 <a href="https://github.com/avi-kaufman" class="inside-link" target="_blank" rel="noopener noreferrer"
                     aria-label="GitHub in new tab">
-                    <i class="fa-brands fa-github fa-flip"></i>
+                    <i class="fa-brands fa-github fa-shake"></i></a>
+                <a href="mailto:avrikaufman@gmail.com" class="inside-link" target="_blank" rel="noopener noreferrer"
+                    aria-label="Email in new tab">
+                    <i class="fa-regular fa-envelope fa-shake"></i>
                 </a>
             </div>
         </footer>
