--- a/index.html
+++ b/index.html
@@ -325,10 +325,10 @@
                 </a>
                 <a href="https://github.com/avi-kaufman" class="inside-link" target="_blank" rel="noopener noreferrer"
                     aria-label="GitHub in new tab">
-                    <i class="fa-brands fa-github fa-shake"></i></a>
+                    <i class="fa-brands fa-github"></i></a>
                 <a href="mailto:avrikaufman@gmail.com" class="inside-link" target="_blank" rel="noopener noreferrer"
                     aria-label="Email in new tab">
-                    <i class="fa-regular fa-envelope fa-shake"></i>
+                    <i class="fa-regular fa-envelope"></i>
                 </a>
             </div>
         </footer>
