--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                     <i class="fa-brands fa-github"></i></a>
                 <a href="mailto:avrikaufman@gmail.com" class="inside-link" target="_blank" rel="noopener noreferrer"
                     aria-label="Email in new tab">
-                    <i class="fa-regular fa-envelope"></i>
+                    <i class="fa-solid fa-envelope"></i>
                 </a>
             </div>
         </footer>
