--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
                 </a>
             </div>
         </footer>
+        <p>© 2023 avikaufman.tech. All Rights Reserved.</p>
     </div>
 </body>
 
