fix head and footer

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
                 <h2>About Me</h2>
                 <div class="page-content about">
                     <div>
-                        <img src="personalImg.jpg" alt="Personal photo of Avi Kaufman" width="120"
-                            class="personal-img">
+                        <img src="personalImg.jpg" alt="Personal photo of Avi Kaufman" width="120" class="personal-img">
                     </div>
                     <p>I am 29 years old and in my final year of computer science studies at
                         <a href="https://www.runi.ac.il/" class="outside-link" target="_blank"
