fix footer and add dynamic title efect

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         </header>
         <main>
             <div id="home" class="page">
-                <h2>Hi, friend!</h2>
+                <h2 id="dynamic-title">Hi, friend!</h2>
+                <script src="dynamicTitle.js"></script>
                 <div class="page-content">
                     <p class="welcome-message">I'm Avi Kaufman, a passionate coder and tech explorer.
                         Happy to see you here - let's embark on a journey through my digital world together!</p>
