--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta name="author" content="Avi Kaufman">
     <meta name="description" content="Main page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- maybe change lager the title wen navigate on differnt pages -->
     <title>Avi Kaufman</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <!-- footer style -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital@1&family=Roboto:wght@500&display=swap"
         rel="stylesheet">
@@ -231,7 +229,7 @@
                 <div class="page-content contactMe">
                     <p>I'd love to hear from you! Whether you have a question, feedback, or just want to chat,
                         feel free to reach out. I'll do my best to get back to you as soon as possible.</p>
-                    <form action="https://formspree.io/f/xwkdzpqj" method="post" class="contact-form">
+                    <form action="https://formspree.io/f/xwkdzpqj" method="post" id="myForm" class="contact-form">
                         <div>
                             <label for="name"></label>
                             <input type="text" id="name" name="name" placeholder="Name:" required>
@@ -249,6 +247,7 @@
                             <input type="submit" value="Submit">
                         </div>
                     </form>
+                    <script src="formSubmition.js"></script>
                 </div>
             </div>
             <div id="resume"></div>
