some changes on projects section, html and css on progress

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div id="aboutMe" class="page">
-                
+
                 <div class="page-content about">
                     <h2>About Me</h2>
                     <div>
@@ -156,7 +156,28 @@
             <div id="projects" class="page">
                 <h2>Projects</h2>
                 <div class="page-content">
-                    <ul>
+                    <!-- Project 1 -->
+                    <div class="project">
+                        <h3>My Portfolio</h3>
+                        <p>A personal website developed using traditional methods with HTML, CSS, and JavaScript.</p>
+                        <video controls>
+                            <source src="portfolio.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                        <a href="https://github.com/avi-kaufman/avi-kaufman.github.io.git" target="_blank">View on
+                            GitHub</a>
+                    </div>
+                    <!-- Project 2 -->
+                    <div class="project">
+                        <h3>My Portfolio</h3>
+                        <p>personal website implemented with HTML, CSS and JavaScript</p>
+                        <video controls>
+                            <source src="path_to_project_1_video.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                        <a href="https://github.com/yourusername/project1" target="_blank">View on GitHub</a>
+                    </div>
+                    <!-- <ul>
                         <li>
                             <p><a href="https://github.com/avi-kaufman/blog2/tree/main/full_stack/my-app"
                                     class="outside-link" target="_blank" rel="noopener noreferrer">
@@ -167,7 +188,7 @@
                             <p><a href="" class="outside-link" target="_blank" rel="noopener noreferrer">personal
                                     website implemented with HTML, CSS and JavaScript</a></p>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
             <div id="education" class="page">
