added style to video project element

--- a/index.html
+++ b/index.html
@@ -154,41 +154,34 @@
                 </div>
             </div>
             <div id="projects" class="page">
-                <h2>Projects</h2>
-                <div class="page-content">
-                    <!-- Project 1 -->
-                    <div class="project">
-                        <h3>My Portfolio</h3>
-                        <p>A personal website developed using traditional methods with HTML, CSS, and JavaScript.</p>
-                        <video controls>
-                            <source src="portfolio.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
-                        <a href="https://github.com/avi-kaufman/avi-kaufman.github.io.git" target="_blank">View on
-                            GitHub</a>
-                    </div>
-                    <!-- Project 2 -->
-                    <div class="project">
-                        <h3>My Portfolio</h3>
-                        <p>personal website implemented with HTML, CSS and JavaScript</p>
-                        <video controls>
-                            <source src="path_to_project_1_video.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
-                        <a href="https://github.com/yourusername/project1" target="_blank">View on GitHub</a>
-                    </div>
-                    <!-- <ul>
-                        <li>
-                            <p><a href="https://github.com/avi-kaufman/blog2/tree/main/full_stack/my-app"
-                                    class="outside-link" target="_blank" rel="noopener noreferrer">
-                                    Blog application</a> with React front-end, Python REST API back-end, MySQL database,
+                <div id="projects-container">
+                    <h2>Projects</h2>
+                    <div class="page-content">
+                        <!-- Project 1 -->
+                        <div class="project">
+                            <h3>My Portfolio</h3>
+                            <p>A personal website developed using traditional methods with HTML, CSS, and JavaScript.
+                            </p>
+                            <video controls>
+                                <source src="portfolio.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                            <a href="https://github.com/avi-kaufman/avi-kaufman.github.io.git" target="_blank">View on
+                                GitHub</a>
+                        </div>
+                        <!-- Project 2 -->
+                        <div class="project">
+                            <h3>Blog</h3>
+                            <p>Blog application with React front-end, Python REST API back-end, MySQL database,
                                 deployed on AWS (RDS & EC2)</p>
-                        </li>
-                        <li>
-                            <p><a href="" class="outside-link" target="_blank" rel="noopener noreferrer">personal
-                                    website implemented with HTML, CSS and JavaScript</a></p>
-                        </li>
-                    </ul> -->
+                            <video controls>
+                                <source src="" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                            <a href="https://github.com/avi-kaufman/fullstack_blog.git" target="_blank">View on
+                                GitHub</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="education" class="page">
