--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
             <div id="projects" class="page">
                 <div id="projects-container">
                     <h2>Projects</h2>
-                    <div class="page-content">
+                    <div class="page-content"><!-- TODO: add src video project-->
                         <!-- Project 1 -->
                         <div class="project">
                             <h3>My Portfolio</h3>
                             <p>A personal website developed using traditional methods with HTML, CSS, and JavaScript.
                             </p>
                             <video controls>
-                                <source src="portfolio.mp4" type="video/mp4">
+                                <source src="" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                             <a href="https://github.com/avi-kaufman/avi-kaufman.github.io.git" target="_blank">View on
