Reorganizing and arranging files in folders

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Main page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avi Kaufman</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="./css/stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital@1&family=Roboto:wght@500&display=swap"
         rel="stylesheet">
@@ -21,7 +21,7 @@
                 <div class="logo-content inside-link inside-link">Avi Kaufman</div>
             </a>
             <button class="menu-btn">☰</button>
-            <script src="openMenu.js"></script>
+            <script src="./js/openMenu.js"></script>
             <div class="menu-container">
                 <nav class="menu-links">
                     <ul>
@@ -39,7 +39,7 @@
         <main>
             <div id="home" class="page">
                 <h2 id="dynamic-title">Hi, friend!</h2>
-                <script src="dynamicTitle.js"></script>
+                <script src="./js/dynamicTitle.js"></script>
                 <div class="page-content">
                     <p class="welcome-message">I'm Avi Kaufman, a passionate coder and tech explorer.
                         Happy to see you here - let's embark on a journey through my digital world together!</p>
@@ -50,7 +50,8 @@
                 <div class="page-content about">
                     <h2>About Me</h2>
                     <div>
-                        <img src="personalImg.jpg" alt="Personal photo of Avi Kaufman" width="120" class="personal-img">
+                        <img src="images/personalImg.jpg" alt="Personal photo of Avi Kaufman" width="120"
+                            class="personal-img">
                     </div>
                     <p>I am 29 years old and in my final year of computer science studies at
                         <a href="https://www.runi.ac.il/" class="outside-link" target="_blank"
@@ -262,7 +263,7 @@
                             <input type="submit" value="Submit">
                         </div>
                     </form>
-                    <script src="formSubmition.js"></script>
+                    <script src="./js/formSubmition.js"></script>
                 </div>
             </div>
             <div id="resume"></div>
@@ -270,7 +271,7 @@
                 <h2>Avi - Resume</h2>
                 <div class="page-content">
                     <div class="download-link">
-                        <a href="CV-Avi-Kaufman.pdf" download>Download PDF Version</a>
+                        <a href="./documents/Avi_Kaufman_CV.pdf" download>Download PDF Version</a>
                     </div>
                     <div>
                         <h3>Personal Information</h3>
