changes in exp and res added

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                     </div>
                     <p>I am 29 years old and in my final year of computer science studies at
                         <a href="https://www.runi.ac.il/" class="outside-link" target="_blank"
-                            rel="noopener noreferrer">Reichman
-                            University</a>,
+                            rel="noopener noreferrer">'Reichman
+                            University'</a>,
                         where I am
                         on the <a href="https://www.runi.ac.il/admissions/undergraduate/scholarships/keren-or/"
-                            class="outside-link" target="_blank" rel="noopener noreferrer">"Keren Or"</a>
+                            class="outside-link" target="_blank" rel="noopener noreferrer">'Keren Or'</a>
                         scholarship track.
                         I live in Tel Aviv with my newlywed wife, Rotem, and our adorable cat,
                         Ray.
@@ -85,7 +85,7 @@
                     <p>At 18, I lived with relatives who took me in. Like many youths in their
                         area, I attended a pre-military academy called <a href="https://mechinathaemek.chivruta.org/"
                             class="outside-link" target="_blank" rel="noopener noreferrer">
-                            "Emek HaMaayanot"</a> near
+                            'Emek HaMaayanot'</a> near
                         Beit She'an. There, we immersed ourselves in contemporary spiritual
                         philosophy and Zionism, and they prepared us physically and mentally
                         for military service. During my time at the academy, the IDF initially
@@ -93,8 +93,8 @@
                         appeal the decision over several months and facing rejection from three
                         special committees, I opted to volunteer for national service. In the
                         first year, I served at <a href="https://jrv.org.il/" class="outside-link" target="_blank"
-                            rel="noopener noreferrer">"Jordan
-                            River Village"</a>, and
+                            rel="noopener noreferrer">'Jordan
+                            River Village'</a>, and
                         in the second, with
                         <a href="https://www.mdais.org/en" class="outside-link" target="_blank"
                             rel="noopener noreferrer">Magen David
@@ -126,13 +126,14 @@
                 <div class="page-content">
                     <h3>Technical Skills</h3>
                     <ul>
-                        <li><strong>Programming Languages: </strong>Python, Java, C#, JavaScript</li>
-                        <li><strong>Frameworks & Libraries: </strong>.NET, React</li>
+                        <li><strong>Programming Languages: </strong>Python, Java, C#, C, Dart & Flutter, HTML, CSS,
+                            JavaScript</li>
+                        <li><strong>Frameworks & Libraries: </strong>.NET, React, Flask</li>
                         <li><strong>Databases: </strong>mysql, SQLAlchemy</li>
                         <li><strong>Tools & IDEs: </strong>Visual Studio code, Visual Studio, IntelliJ, Jupyter
-                            Notebook, Git
+                            Notebook, Git, Postman
                         </li>
-                        <li><strong>Platforms: </strong>Windows, Linux</li>
+                        <li><strong>Operating systems: </strong>Windows, Linux</li>
                     </ul>
                     <div>
                         <h3>Soft Skills</h3>
@@ -214,10 +215,17 @@
                 <h2>Experience</h2>
                 <div class="page-content experience">
                     <div class="mda">
+                        <h3>Software Developer at 'KoaliTime' startup
+                        </h3>
+
+                        <p><strong>Duration: </strong>2023 - Present</p>
+
+                    </div>
+                    <div class="mda">
                         <h3>Emergency Medical Technician (EMT)</h3>
-                        <p><strong>Organization: </strong>IDF Disabled Veterans Organization “Beit Halochem”, Tel Aviv
+                        <p><strong>Organization: </strong>IDF Disabled Veterans Organization 'Beit Halochem', Tel Aviv
                         </p>
-                        <p><strong>Duration: </strong>2018 - Present</p>
+                        <p><strong>Duration: </strong>2018 - 2023</p>
                         <p><strong>Key Responsibilities:</strong></p>
                         <p>Provided immediate emergency medical support to individuals in critical situations.</p>
 
@@ -225,10 +233,10 @@
                     <div>
                         <h3>Volunteer</h3>
                         <p><strong>Organizations: </strong><a href="https://hillel.org.il/" class="outside-link"
-                                target="_blank" rel="noopener noreferrer">"Hillel" </a>and
+                                target="_blank" rel="noopener noreferrer">'Hillel' </a>and
                             <a href="https://leshinuy.org/" class="outside-link" target="_blank"
                                 rel="noopener noreferrer">
-                                "Out for Change" </a>nonprofits
+                                'Out for Change' </a>nonprofits
                         </p>
                         <p><strong>Duration: </strong>2018 - Present</p>
                         <p><strong>Key Contributions: </strong>Help and organization of Shabbat diner for the
@@ -277,35 +285,44 @@
                         <h3>Personal Information</h3>
                         <p>
                             I departed the Ultra-Orthodox community, independently pursued my
-                            education, earned a full "Bagrut" in two years excelling in English and math,
+                            education, earned a full 'Bagrut' in two years excelling in English and math,
                             and found my passion for math and programming.
                         </p>
                         <p>
-                            Today, I am a B.A. Computer Science (B.Sc.) Student at Reichman University,
-                            supported by the "Keren Or" scholarship.
-                            Highly motivated, enthusiastic, looking for new opportunities.
+                            Currently, I am a software developer at the 'KoaliTime' startup and a B.A.
+                            Computer Science student at 'Reichman University', supported by the 'Keren Or'
+                            scholarship.
+
+                        </p>
+                        <p>Highly motivated, enthusiastic, looking for new opportunities.
+                        </p>
+                        <h3>Employment</h3>
+                        <p><strong>2023 - Present </strong> - Software Developer at 'KoaliTime' startup
+                        </p>
+                        <p><strong>2018 - 2023</strong> - Emergency Medical Technician (EMT), IDF Disabled
+                            Veterans
+                            Organization 'Beit Halochem' Tel Aviv
                         </p>
                         <h3>Education</h3>
-                        <p>Present - Last Year B.A. Computer Science (B.Sc.), Reichman University, Herzliya.</p>
+                        <p><strong>Present</strong> - Last Year B.A. Computer Science (B.Sc.), 'Reichman University',
+                            Herzliya.</p>
+                        <p><strong>2017 </strong>- External Bagroot (High School Equivalency test), Tel-Aviv</p>
+                        <p><strong>2010 </strong>- 'Knesset Meir' Yeshiva, Rishon Le'Zion</p>
+
                         <h3>Selected Courses</h3>
                         <p>Data Structures, Algorithms, Operating Systems, Advanced Programming,
                             Machine Learning From Data, Full Stack Development
                         </p>
+
                         <h3>Project</h3>
                         <p>Blog application with React front-end, Python REST API back-end, MySQL
                             database, deployed on AWS (RDS & EC2)
                         </p>
                         <h3>Extracurricular</h3>
-                        <p>Pulse Healthtech Innovation Entrepreneurship Club <br>
-                            Volunteer Tutor for "Keren Or" scholarship, Math and Programming
+                        <p>Pulse Healthtech Innovation Entrepreneurship Club <br><br>
+                            Volunteer Tutor for 'Keren Or' scholarship, Math and Programming
                         </p>
-                        <p><strong>2017 </strong>- External Bagroot (High School Equivalency test), Tel-Aviv</p>
-                        <p><strong>2010 </strong>- Knesset Meir Yeshiva, Rishon Le'Zion</p>
-                        <h3>Employment</h3>
-                        <p><strong>2018 - Present</strong> - Emergency Medical Technician (EMT), IDF Disabled
-                            Veterans
-                            Organization “Beit Halochem” Tel Aviv
-                        </p>
+
                         <h3>Personal Skills</h3>
                         <p>Teamwork, Full Dedication, Pursuing Excellence, Not afraid of hard work, Proactive,
                             Autodidact
@@ -316,9 +333,9 @@
                         <p><strong>2016 </strong>- Emergency Medical Technician (EMT) Course, MDA</p>
                         <h3>Volunteering</h3>
                         <p><strong>2018 - Present</strong> - <a href="https://hillel.org.il/" class="outside-link"
-                                target="_blank" rel="noopener noreferrer">"Hillel"</a>
+                                target="_blank" rel="noopener noreferrer">'Hillel'</a>
                             and <a href="https://leshinuy.org/" class="outside-link" target="_blank"
-                                rel="noopener noreferrer">"Out for Change"</a> nonprofits</p>
+                                rel="noopener noreferrer">'Out for Change'</a> nonprofits</p>
                         <h3>National Service</h3>
                         <p><strong>2016 - 2017 </strong>- Emergency Medical Technician (EMT), Magen David Adom
                             (MDA), Tel Aviv</p>
@@ -326,7 +343,7 @@
                             living
                             with chronic diseases, Givat Avni
                         </p>
-                        <p><strong>2013 - 2014 </strong>- Pre-Military "Mechinat HaEmek" program</p>
+                        <p><strong>2013 - 2014 </strong>- Pre-Military 'Mechinat HaEmek' program</p>
                     </div>
                 </div>
 
