about changes added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         where I am
                         on the <a href="https://www.runi.ac.il/admissions/undergraduate/scholarships/keren-or/"
                             class="outside-link" target="_blank" rel="noopener noreferrer">'Keren Or'</a>
-                        scholarship track.
+                        scholarship track. I currently work as a Software Developer at 'KoaliTime' startup.
                         I live in Tel Aviv with my newlywed wife, Rotem, and our adorable cat,
                         Ray.
                     </p>
@@ -112,12 +112,14 @@
                         journey, feeling that all my efforts in the matriculation exams had
                         paid off.
                     </p>
-                    <p>Now, in my final year, I relish the challenges and critical thinking
-                        demanded by my courses. I believe I've found my calling, a domain
-                        that consistently pushes and nurtures my growth. Many facets of the
-                        high-tech world intrigue me, and I aspire to work in a role that
-                        either adds value to the Health-Tech sector or enhances the quality
-                        of life for many.
+                    <p>Now, in my final year, I work at KoaliTime - which will help parents
+                        monitor their children's usage of mobile apps, to ensure quality time
+                        and usage of skill-building apps while using their devices.
+                        I relish the challenges and critical thinking demanded by my courses.
+                        I believe I've found my calling, a domain that consistently pushes and
+                        nurtures my growth. Many facets of the high-tech world intrigue me,
+                        and I aspire to work in a role that either adds value to the Health-Tech
+                        sector or enhances the quality of life for many.
                     </p>
                 </div>
             </div>
